@@ -7,6 +7,7 @@ import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private final LinkedList<Task> taskHistory = new LinkedList<>();
+    static final int maxLength = 10;
 
     @Override
     public List<Task> getHistory() {
@@ -15,8 +16,8 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public void add(Task task) {
-        if (taskHistory.size() == 10) {
-            taskHistory.remove(0);
+        if (taskHistory.size() == maxLength) {
+            taskHistory.removeFirst();
         }
         taskHistory.add(task);
     }
